--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
+    "start": "node app.js",
     "test": "mocha --exit --reporter mocha-multi-reporters --reporter-options configFile=test/config.json",
     "test:selenium": "node ./test/selenium/post-creation.js"
   },
