--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -41,7 +41,7 @@ steps:
 - task: PublishTestResults@2
   inputs:
     testResultsFormat: "JUnit"
-    testResultsFiles: "**/*.xml" 
+    testResultsFiles: "**/out/test-results.xml" 
 
 - task: CopyFiles@2
   inputs:
