Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -52,6 +52,7 @@ steps:
   displayName: "Copy test xml files"
 
 - task: PublishBuildArtifacts@1
+  displayName: 'Publish Test Artifact'
   inputs:
     artifactName: "test-results"
     pathToPublish: "$(Build.ArtifactStagingDirectory)/test-xml"
